# pm-bridge-mcp

./: .env.example  .gitignore  .npmrc  .preship-audit-allow.json  CHANGELOG.md  CLAUDE_IMPROVEMENT_LOG.md  CONTRIBUTING.md  HELP.md  LAST_AUDIT_SUMMARY.md  LICENSE  LICENSES.json  README.md  README_FIRST_AI.md  SECURITY.md  TODO_IMPROVEMENTS.md  llms.txt  package-lock.json  package.json  tsconfig.json  vitest.config.e2e.ts  vitest.config.ts
.github/workflows/: build-native-tray.yml  ci.yml  preship.yml  publish.yml
docs/: agentic-mcp-design-review.md  audit-2026-05-28.md  index.md  preship.md  proton-bridge-gaps.md  proton-bridge-imap.md  proton-bridge-overview.md  proton-bridge-security-model.md  proton-bridge-smtp.md  proton-bridge-tls.md  smtp-imap-config-reference.md
native/tray/: .gitignore  .npmignore  Cargo.toml  README.md  build.rs  index.d.ts  index.darwin-arm64.node  index.js  index.linux-arm64-gnu.node  index.linux-x64-gnu.node  index.win32-arm64-msvc.node  index.win32-x64-msvc.node  package.json
native/tray/src/: lib.rs
scripts/: check-licenses.mjs  check-npm-audit.mjs  check-secrets.mjs  check-version-sync.mjs  install-hooks.mjs  preship.mjs  smoke-tarball.mjs  wait-for-port.mjs
scripts/lib/: preship-runner.mjs
src/: index.ts  settings-main.ts  test-setup.ts  tray.ts
src/accounts/: manager.test.ts  manager.ts  registry.test.ts  registry.ts  types.ts
src/agents/: audit.test.ts  audit.ts  caller-context.test.ts  caller-context.ts  grant-manager.test.ts  grant-manager.ts  grant-store.test.ts  grant-store.ts  notifications.test.ts  notifications.ts  registry.ts  types.ts
src/config/: config-lock.test.ts  loader.test.ts  loader.ts  schema.test.ts  schema.ts
src/crypto/: credential-encryption.test.ts  credential-encryption.ts
src/notifications/: desktop.test.ts  desktop.ts  webhooks.test.ts  webhooks.ts
src/permissions/: escalation.test.ts  escalation.ts  manager.test.ts  manager.ts
src/security/: keychain.test.ts  keychain.ts  memory.test.ts  memory.ts
src/services/: analytics-service.test.ts  analytics-service.ts  bridge-tls.test.ts  bridge-tls.ts  bridge-version.test.ts  connect-tls.test.ts  content-parser.test.ts  content-parser.ts  folder-management.test.ts  fts-service.test.ts  fts-service.ts  idle-error-listener.test.ts  imap-fetch.test.ts  imap-operations.test.ts  pass-service.test.ts  pass-service.ts  reminder-service.test.ts  reminder-service.ts  (+9 more)
test/: agent-harness.test.ts
(+79 files in other folders)
